Implement cropping image upload (must be below bottom right of starting point

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,20 @@
         "tabs",
         "activeTab",
         "storage"
-    ]
+    ],
+    "background": {
+		"scripts": [
+            "background.js"
+		],
+		"persistent": false
+	},
+	
+	"content_scripts": [
+		{
+			"matches": ["http://*/*", "https://*/*"],
+			"js": ["content.js"],
+	        "run_at": "document_end",
+	        "all_frames": true
+		}
+	]
 }
